--- a/ProjectT34mal2hoch3/Saved/Config/Windows/Engine.ini
+++ b/ProjectT34mal2hoch3/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Tim/Documents/Unreal Projects/ProjectT34mal2hoch3/Content
+Paths=../../../../../../Users/Tim/Documents/Unreal Projects/Versuch1/ProjectT34mal2hoch3/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
@@ -18,5 +18,16 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
