was haltet ihr von der textur für den amboss?
hab auch ne normal map mit rein genommen

--- a/ProjectT34mal2hoch3/Saved/Config/Windows/EditorUserSettings.ini
+++ b/ProjectT34mal2hoch3/Saved/Config/Windows/EditorUserSettings.ini
@@ -69,14 +69,9 @@ AssetDialog.CurrentViewType=1
 
 [AssetEditorManager]
 CleanShutdown=True
-<<<<<<< HEAD
-=======
+None=======
+None=======
 OpenAssetsAtExit=/Game/Objects/Amboss.Amboss
-OpenAssetsAtExit=/Game/Objects/Textures/AmbossMaterial.AmbossMaterial
-<<<<<<< HEAD
->>>>>>> origin/master
-=======
->>>>>>> origin/master
 
 [DetailCategories]
 FirstPersonOverview_C.Testing=True
@@ -218,18 +213,16 @@ MaterialExpressionTextureCoordinate.MaterialExpression=True
 /Game/Objects/Textures/AmbossUV.AmbossUV=0
 /Game/Objects/Textures/NewMaterial.NewMaterial=1
 /Game/Objects/Textures/Amboss2UV.Amboss2UV=0
+/Game/Objects/MetalBase0108_2_S.MetalBase0108_2_S=0
+/Game/Objects/Textures/AmbossHMaterial.AmbossHMaterial=0
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-<<<<<<< HEAD
-<<<<<<< HEAD
+ScreenPosition=X=910.000 Y=187.000
 WindowSize=X=1350.000 Y=790.000
-=======
 WindowSize=X=1340.000 Y=780.000
->>>>>>> origin/master
-=======
-WindowSize=X=1340.000 Y=780.000
->>>>>>> origin/master
+WindowSize=X=1350.000 Y=790.000
+None=======
+None=======
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -669,9 +662,12 @@ LastLogListing=LoadErrors
 
 [MaterialEditor]
 LightDir=P=-39.999992 Y=27.499994 R=0.000000
-PrimType=1
+PrimType=2
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
+
+[SuppressableDialogs]
+Warning_NoPreviewMeshFound=False
 
 
