Health Stamina Magic
add Health Stamina and Magic Variable and HUD bars

--- a/ProjectT34mal2hoch3/Saved/Config/Windows/EditorLayout.ini
+++ b/ProjectT34mal2hoch3/Saved/Config/Windows/EditorLayout.ini
@@ -385,9 +385,13 @@ Blueprints_Unified_Components_v5=(\
 		)\
 	]\
 )
-Standalone_StaticMeshEditor_Layout_v3=(\
+Standalone_StaticMeshEditor_Layout_v3=( 	"Type": "Layout", 	"Name": "Standalone_StaticMeshEditor_Layout_v3", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.10000000149011612, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 0.89999997615814209, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 0.60000002384185791, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "StaticMeshEditor_Viewport", 							"Tabs": [ 								( 									"TabId": "StaticMeshEditor_Viewport", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "StaticMeshEditor_Properties", 									"Tabs": [ 										( 											"TabId": "StaticMeshEditor_Properties", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.5, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "StaticMeshEditor_Collision", 									"Tabs": [ 										( 											"TabId": "StaticMeshEditor_SocketManager", 											"TabState": "ClosedTab" 										), 										( 											"TabId": "StaticMeshEditor_Collision", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						) 					] 				) 			] 		) 	] )
+Blueprints_Unified_v4=( 	"Type": "Layout", 	"Name": "Blueprints_Unified_v4", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.15000000596046448, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "MyBlueprint", 					"Tabs": [ 						( 							"TabId": "MyBlueprint", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 0.60000002384185791, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.18672099709510803, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "AssetEditorToolkit_Toolbar", 							"Tabs": [ 								( 									"TabId": "AssetEditorToolkit_Toolbar", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.80000001192092896, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "Document : 0", 							"Tabs": [ 								( 									"TabId": "Document", 									"TabState": "ClosedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "None", 							"Tabs": [ 								( 									"TabId": "CompilerResults", 									"TabState": "ClosedTab" 								), 								( 									"TabId": "FindResults", 									"TabState": "ClosedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.25, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "Inspector", 					"Tabs": [ 						( 							"TabId": "Inspector", 							"TabState": "OpenedTab" 						), 						( 							"TabId": "PaletteList", 							"TabState": "ClosedTab" 						) 					] 				) 			] 		) 	] )
+Standalone_MaterialEditor_Layout_v5=( 	"Type": "Layout", 	"Name": "Standalone_MaterialEditor_Layout_v5", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Vertical", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.10000000149011612, 					"Type": "Stack", 					"HideTabWell": true, 					"ForegroundTab": "AssetEditorToolkit_Toolbar", 					"Tabs": [ 						( 							"TabId": "AssetEditorToolkit_Toolbar", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 0.89999997615814209, 					"Type": "Splitter", 					"Orientation": "Orient_Horizontal", 					"Nodes": [ 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": true, 									"ForegroundTab": "MaterialEditor_Preview", 									"Tabs": [ 										( 											"TabId": "MaterialEditor_Preview", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 1, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "MaterialEditor_MaterialProperties", 									"Tabs": [ 										( 											"TabId": "MaterialEditor_MaterialProperties", 											"TabState": "OpenedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 0.80000001192092896, 							"Type": "Splitter", 							"Orientation": "Orient_Vertical", 							"Nodes": [ 								( 									"SizeCoefficient": 0.80000001192092896, 									"Type": "Stack", 									"HideTabWell": true, 									"ForegroundTab": "MaterialEditor_GraphCanvas", 									"Tabs": [ 										( 											"TabId": "MaterialEditor_GraphCanvas", 											"TabState": "OpenedTab" 										) 									] 								), 								( 									"SizeCoefficient": 0.20000000298023224, 									"Type": "Stack", 									"HideTabWell": false, 									"ForegroundTab": "MaterialEditor_Stats", 									"Tabs": [ 										( 											"TabId": "MaterialEditor_Stats", 											"TabState": "OpenedTab" 										), 										( 											"TabId": "MaterialEditor_Find", 											"TabState": "ClosedTab" 										) 									] 								) 							] 						), 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "MaterialEditor_Palette", 							"Tabs": [ 								( 									"TabId": "MaterialEditor_Palette", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				) 			] 		) 	] )
+Standalone_TextureEditor_Layout_v3=( 	"Type": "Layout", 	"Name": "Standalone_TextureEditor_Layout_v3", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.6600000262260437, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.10000000149011612, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "AssetEditorToolkit_Toolbar", 							"Tabs": [ 								( 									"TabId": "AssetEditorToolkit_Toolbar", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.89999997615814209, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "TextureEditor_Viewport", 							"Tabs": [ 								( 									"TabId": "TextureEditor_Viewport", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.33000001311302185, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "TextureEditor_Properties", 					"Tabs": [ 						( 							"TabId": "TextureEditor_Properties", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
+WidgetBlueprintEditor_Designer_Layout_v3=(\
 	"Type": "Layout",\
-	"Name": "Standalone_StaticMeshEditor_Layout_v3",\
+	"Name": "WidgetBlueprintEditor_Designer_Layout_v3",\
 	"PrimaryAreaIndex": 0,\
 	"Areas": [\
 		(\
@@ -397,7 +401,7 @@ Standalone_StaticMeshEditor_Layout_v3=(\
 			"WindowPlacement": "Placement_NoWindow",\
 			"Nodes": [\
 				(\
-					"SizeCoefficient": 0.10000000149011612,\
+					"SizeCoefficient": 0.20000000298023224,\
 					"Type": "Stack",\
 					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
@@ -409,24 +413,12 @@ Standalone_StaticMeshEditor_Layout_v3=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.89999997615814209,\
+					"SizeCoefficient": 0.69999998807907104,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.60000002384185791,\
-							"Type": "Stack",\
-							"HideTabWell": true,\
-							"ForegroundTab": "StaticMeshEditor_Viewport",\
-							"Tabs": [\
-								(\
-									"TabId": "StaticMeshEditor_Viewport",\
-									"TabState": "OpenedTab"\
-								)\
-							]\
-						),\
-						(\
-							"SizeCoefficient": 0.20000000298023224,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
@@ -434,10 +426,10 @@ Standalone_StaticMeshEditor_Layout_v3=(\
 									"SizeCoefficient": 0.5,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "StaticMeshEditor_Properties",\
+									"ForegroundTab": "WidgetTemplates",\
 									"Tabs": [\
 										(\
-											"TabId": "StaticMeshEditor_Properties",\
+											"TabId": "WidgetTemplates",\
 											"TabState": "OpenedTab"\
 										)\
 									]\
@@ -446,17 +438,68 @@ Standalone_StaticMeshEditor_Layout_v3=(\
 									"SizeCoefficient": 0.5,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "StaticMeshEditor_Collision",\
+									"ForegroundTab": "SlateHierarchy",\
 									"Tabs": [\
 										(\
-											"TabId": "StaticMeshEditor_SocketManager",\
-											"TabState": "ClosedTab"\
-										),\
-										(\
-											"TabId": "StaticMeshEditor_Collision",\
+											"TabId": "SlateHierarchy",\
 											"TabState": "OpenedTab"\
 										)\
 									]\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.62962961196899414,\
+							"Type": "Stack",\
+							"HideTabWell": true,\
+							"ForegroundTab": "SlatePreview",\
+							"Tabs": [\
+								(\
+									"TabId": "SlatePreview",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.22037036716938019,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "WidgetDetails",\
+							"Tabs": [\
+								(\
+									"TabId": "WidgetDetails",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						)\
+					]\
+				),\
+				(\
+					"SizeCoefficient": 0.30000001192092896,\
+					"Type": "Splitter",\
+					"Orientation": "Orient_Horizontal",\
+					"Nodes": [\
+						(\
+							"SizeCoefficient": 0.15000000596046448,\
+							"Type": "Stack",\
+							"HideTabWell": false,\
+							"ForegroundTab": "Animations",\
+							"Tabs": [\
+								(\
+									"TabId": "Animations",\
+									"TabState": "OpenedTab"\
+								)\
+							]\
+						),\
+						(\
+							"SizeCoefficient": 0.85000002384185791,\
+							"Type": "Stack",\
+							"HideTabWell": true,\
+							"ForegroundTab": "Sequencer",\
+							"Tabs": [\
+								(\
+									"TabId": "Sequencer",\
+									"TabState": "OpenedTab"\
 								)\
 							]\
 						)\
@@ -466,10 +509,9 @@ Standalone_StaticMeshEditor_Layout_v3=(\
 		)\
 	]\
 )
-Blueprints_Unified_v4=( 	"Type": "Layout", 	"Name": "Blueprints_Unified_v4", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.15000000596046448, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "MyBlueprint", 					"Tabs": [ 						( 							"TabId": "MyBlueprint", 							"TabState": "OpenedTab" 						) 					] 				), 				( 					"SizeCoefficient": 0.60000002384185791, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.18672099709510803, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "AssetEditorToolkit_Toolbar", 							"Tabs": [ 								( 									"TabId": "AssetEditorToolkit_Toolbar", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.80000001192092896, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "Document : 0", 							"Tabs": [ 								( 									"TabId": "Document", 									"TabState": "ClosedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.20000000298023224, 							"Type": "Stack", 							"HideTabWell": false, 							"ForegroundTab": "None", 							"Tabs": [ 								( 									"TabId": "CompilerResults", 									"TabState": "ClosedTab" 								), 								( 									"TabId": "FindResults", 									"TabState": "ClosedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.25, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "Inspector", 					"Tabs": [ 						( 							"TabId": "Inspector", 							"TabState": "OpenedTab" 						), 						( 							"TabId": "PaletteList", 							"TabState": "ClosedTab" 						) 					] 				) 			] 		) 	] )
-Standalone_MaterialEditor_Layout_v5=(\
+WidgetBlueprintEditor_Graph_Layout_v1=(\
 	"Type": "Layout",\
-	"Name": "Standalone_MaterialEditor_Layout_v5",\
+	"Name": "WidgetBlueprintEditor_Graph_Layout_v1",\
 	"PrimaryAreaIndex": 0,\
 	"Areas": [\
 		(\
@@ -479,7 +521,7 @@ Standalone_MaterialEditor_Layout_v5=(\
 			"WindowPlacement": "Placement_NoWindow",\
 			"Nodes": [\
 				(\
-					"SizeCoefficient": 0.10000000149011612,\
+					"SizeCoefficient": 0.18672099709510803,\
 					"Type": "Stack",\
 					"HideTabWell": true,\
 					"ForegroundTab": "AssetEditorToolkit_Toolbar",\
@@ -491,35 +533,35 @@ Standalone_MaterialEditor_Layout_v5=(\
 					]\
 				),\
 				(\
-					"SizeCoefficient": 0.89999997615814209,\
+					"SizeCoefficient": 1,\
 					"Type": "Splitter",\
 					"Orientation": "Orient_Horizontal",\
 					"Nodes": [\
 						(\
-							"SizeCoefficient": 0.20000000298023224,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
-									"SizeCoefficient": 1,\
+									"SizeCoefficient": 0.5,\
 									"Type": "Stack",\
-									"HideTabWell": true,\
-									"ForegroundTab": "MaterialEditor_Preview",\
+									"HideTabWell": false,\
+									"ForegroundTab": "MyBlueprint",\
 									"Tabs": [\
 										(\
-											"TabId": "MaterialEditor_Preview",\
+											"TabId": "MyBlueprint",\
 											"TabState": "OpenedTab"\
 										)\
 									]\
 								),\
 								(\
-									"SizeCoefficient": 1,\
+									"SizeCoefficient": 0.5,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "MaterialEditor_MaterialProperties",\
+									"ForegroundTab": "Inspector",\
 									"Tabs": [\
 										(\
-											"TabId": "MaterialEditor_MaterialProperties",\
+											"TabId": "Inspector",\
 											"TabState": "OpenedTab"\
 										)\
 									]\
@@ -527,19 +569,19 @@ Standalone_MaterialEditor_Layout_v5=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.80000001192092896,\
+							"SizeCoefficient": 0.69999998807907104,\
 							"Type": "Splitter",\
 							"Orientation": "Orient_Vertical",\
 							"Nodes": [\
 								(\
 									"SizeCoefficient": 0.80000001192092896,\
 									"Type": "Stack",\
-									"HideTabWell": true,\
-									"ForegroundTab": "MaterialEditor_GraphCanvas",\
+									"HideTabWell": false,\
+									"ForegroundTab": "Document : 2",\
 									"Tabs": [\
 										(\
-											"TabId": "MaterialEditor_GraphCanvas",\
-											"TabState": "OpenedTab"\
+											"TabId": "Document",\
+											"TabState": "ClosedTab"\
 										)\
 									]\
 								),\
@@ -547,14 +589,14 @@ Standalone_MaterialEditor_Layout_v5=(\
 									"SizeCoefficient": 0.20000000298023224,\
 									"Type": "Stack",\
 									"HideTabWell": false,\
-									"ForegroundTab": "MaterialEditor_Stats",\
+									"ForegroundTab": "None",\
 									"Tabs": [\
 										(\
-											"TabId": "MaterialEditor_Stats",\
-											"TabState": "OpenedTab"\
+											"TabId": "CompilerResults",\
+											"TabState": "ClosedTab"\
 										),\
 										(\
-											"TabId": "MaterialEditor_Find",\
+											"TabId": "FindResults",\
 											"TabState": "ClosedTab"\
 										)\
 									]\
@@ -562,14 +604,14 @@ Standalone_MaterialEditor_Layout_v5=(\
 							]\
 						),\
 						(\
-							"SizeCoefficient": 0.20000000298023224,\
+							"SizeCoefficient": 0.15000000596046448,\
 							"Type": "Stack",\
 							"HideTabWell": false,\
-							"ForegroundTab": "MaterialEditor_Palette",\
+							"ForegroundTab": "None",\
 							"Tabs": [\
 								(\
-									"TabId": "MaterialEditor_Palette",\
-									"TabState": "OpenedTab"\
+									"TabId": "PaletteList",\
+									"TabState": "ClosedTab"\
 								)\
 							]\
 						)\
@@ -579,6 +621,5 @@ Standalone_MaterialEditor_Layout_v5=(\
 		)\
 	]\
 )
-Standalone_TextureEditor_Layout_v3=( 	"Type": "Layout", 	"Name": "Standalone_TextureEditor_Layout_v3", 	"PrimaryAreaIndex": 0, 	"Areas": [ 		( 			"SizeCoefficient": 1, 			"Type": "Area", 			"Orientation": "Orient_Horizontal", 			"WindowPlacement": "Placement_NoWindow", 			"Nodes": [ 				( 					"SizeCoefficient": 0.6600000262260437, 					"Type": "Splitter", 					"Orientation": "Orient_Vertical", 					"Nodes": [ 						( 							"SizeCoefficient": 0.10000000149011612, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "AssetEditorToolkit_Toolbar", 							"Tabs": [ 								( 									"TabId": "AssetEditorToolkit_Toolbar", 									"TabState": "OpenedTab" 								) 							] 						), 						( 							"SizeCoefficient": 0.89999997615814209, 							"Type": "Stack", 							"HideTabWell": true, 							"ForegroundTab": "TextureEditor_Viewport", 							"Tabs": [ 								( 									"TabId": "TextureEditor_Viewport", 									"TabState": "OpenedTab" 								) 							] 						) 					] 				), 				( 					"SizeCoefficient": 0.33000001311302185, 					"Type": "Stack", 					"HideTabWell": false, 					"ForegroundTab": "TextureEditor_Properties", 					"Tabs": [ 						( 							"TabId": "TextureEditor_Properties", 							"TabState": "OpenedTab" 						) 					] 				) 			] 		) 	] )
 
 
