--- a/ProjectT34mal2hoch3/Saved/Config/Windows/EditorUserSettings.ini
+++ b/ProjectT34mal2hoch3/Saved/Config/Windows/EditorUserSettings.ini
@@ -14,7 +14,7 @@ DisableStandaloneSound=False
 AdditionalLaunchParameters=
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
-PlayNetDedicated=False
+PlayNetDedicated=True
 PlayNumberOfClients=1
 ClientWindowWidth=640
 RouteGamepadToSecondWindow=False
@@ -25,6 +25,9 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TIM-PC
 LastExecutedLaunchName=TIM-PC
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=-842150451,Y=-842150451)
+MultipleInstancePositions=(X=672,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -61,7 +64,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Objects/Textures
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/HUD
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -71,6 +74,8 @@ AssetDialog.CurrentViewType=1
 CleanShutdown=True
 None=======
 None=======
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/FirstPersonBP/HUD/HUDbars.HUDbars
 
 [DetailCategories]
 FirstPersonOverview_C.Testing=True
@@ -217,6 +222,65 @@ SphereReflectionCapture.ReflectionCapture=True
 SphereReflectionCapture.Rendering=True
 SphereReflectionCapture.Tags=True
 SphereReflectionCapture.Input=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+HUDbars_C.Style=True
+HUDbars_C.Behavior=True
+HUDbars_C.Layout=True
+HUDbars_C.Render Transform=True
+HUDbars_C.Navigation=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_InputTouch.Input=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_MacroInstance.Graph=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_InputAction.Input=True
+FirstPersonCharacter_C.Stats=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/FirstPersonOverview.FirstPersonOverview=0
@@ -231,12 +295,13 @@ SphereReflectionCapture.Input=True
 /Game/Objects/Phal.Phal=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
 /Game/Objects/Textures/Horlzphal_Material.Horlzphal_Material=1
+/Game/FirstPersonBP/HUD/HUDbars.HUDbars=0
 
 [RootWindow]
 ScreenPosition=X=443.000 Y=213.000
 WindowSize=X=1350.000 Y=790.000
 WindowSize=X=1340.000 Y=780.000
-WindowSize=X=1370.000 Y=810.000
+WindowSize=X=1380.000 Y=820.000
 None=======
 None=======
 InitiallyMaximized=True
@@ -628,6 +693,8 @@ MaterialEditor.TimeStamp=2015.04.25-23.12.37
 MaterialEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2015.03.25-18.34.53
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2015.04.25-23.13.24
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailPropertyExpansion]
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
@@ -686,5 +753,25 @@ FbxImportUI.Material=False
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+
+[WidgetTemplatesExpanded]
+Common=True
+Input=False
+Panel=True
+Primitive=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportDirectories=/Game/
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDeleteSourceFilesWithAssets=False
+bSCCUseGlobalSettings=False
 
 
